--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Just learning for now
+Just learning for now<br>
 <a href="https://orcutt989.github.io/d3js/tutorial">https://orcutt989.github.io/d3js/tutorial</a>
