--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -1,2 +1,9 @@
-<h1>22222hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+</head>
+<body>
+<p>Hello!</p>
+</body>
+</html>
